# sawConstraintOptimizer

./: CMakeLists.txt  colcon.pkg
code/: CMakeLists.txt  osaConstrainedOptimization.cpp  osaConstraintIntervals.cpp  osaGravityCompensation.cpp  sawConstraintControllerConfig.cmake.in
components/: CMakeLists.txt  package.xml
components/code/: osaConstrainedOptimization.cpp  osaConstraintIntervals.cpp
components/include/sawConstraintOptimizer/: mtsObjectiveFreeMotion.h  osaConstrainedOptimization.h  osaConstraintEquality.h  osaConstraintInequality.h  osaConstraintIntervals.h  osaConstraintPlane.h  osaEquation.h  osaObjective.h  osaObjectiveFreeMotion.h  sawConstraintOptimizerExport.h
examples/: CMakeLists.txt  osaConstrainedOptimizationExample.cpp  package.xml
include/sawConstraintController/: osaConstrainedOptimization.h  osaConstraintEquality.h  osaConstraintInequality.h  osaConstraintIntervals.h  osaConstraintPlane.h  osaEquation.h  osaObjective.h  sawConstraintControllerExport.h
