<package>
  <name>saw_constraint_optimizer_examples</name>
  <version>1.0.0</version>
  <description>sawConstraintOptimizer Examples
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawConstraintOptimizer</url>

  <build_depend>cisst</build_depend>
  <build_depend>saw_constraint_optimizer</build_depend>

  <run_depend>cisst</run_depend>
  <run_depend>saw_constraint_optimizer</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
